--- a/task 2/Dockerfile
+++ b/task 2/Dockerfile
@@ -1,5 +1,8 @@
-FROM python:3
-ADD app.py /
-RUN pip install flask, requests
-CMD [ "python", "./app.py" ]
-EXPOSE  5000
+# FROM ubuntu:16.04
+FROM python:3.7
+#RUN apt-get update -y && \
+ #   apt-get install -y python-pip python-dev
+COPY . /app
+WORKDIR /app
+RUN pip install -r requirements.txt
+ENTRYPOINT ["python", "app.py"]
