--- a/task 2/Dockerfile
+++ b/task 2/Dockerfile
@@ -1,8 +1,5 @@
-# FROM ubuntu:16.04
 FROM python:3.7
-#RUN apt-get update -y && \
- #   apt-get install -y python-pip python-dev
 COPY . /app
 WORKDIR /app
 RUN pip install -r requirements.txt
-ENTRYPOINT ["python", "app.py"]
+ENTRYPOINT ["python", "lensa_api.py"]
